# gadget

./: .dockerignore  .envrc  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Cargo.toml (workspace root)  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  dist-workspace.toml  docker-compose.yml  flake.nix  global_protocols.toml  release-plz.toml  rust-toolchain.toml  rustfmt.toml  settings.env  taplo.toml  zipper.py
anvil-testing-utils/: Cargo.toml
anvil-testing-utils/src/: anvil.rs  error.rs  keys.rs  wait_transaction.rs
aws/: Cargo.toml
aws/src/: config.rs  lib.rs
aws/src/kms/: get_public_key.rs  get_signature.rs  mod.rs  signer.rs
aws/src/secret_manager/: mod.rs
blueprint-manager/: CHANGELOG.md  Cargo.toml
blueprint-manager/src/: cli.rs  config.rs  lib.rs  main.rs  utils.rs
blueprint-manager/src/executor/: event_handler.rs  mod.rs
blueprint-manager/src/gadget/: mod.rs  native.rs
blueprint-manager/src/protocols/: resolver.rs
blueprint-manager/src/sdk/: config.rs  entry.rs  keystore.rs  mod.rs  setup.rs  utils.rs
blueprint-manager/src/sources/: github.rs  mod.rs  testing.rs
blueprint-metadata/: CHANGELOG.md  Cargo.toml
blueprint-metadata/src/: lib.rs
blueprint-serde/: CHANGELOG.md  Cargo.toml
blueprint-serde/src/: de.rs  error.rs  lib.rs  ser.rs  tests.rs
blueprint-test-utils/: CHANGELOG.md  Cargo.toml  build.rs  foundry.toml
blueprint-test-utils/src/: anvil.rs  eigenlayer_test_env.rs  helpers.rs  incredible_squaring_helpers.rs  lib.rs  mpc.rs  symbiotic_test_env.rs  tangle.rs  test_ext.rs  test_utils.rs
blueprint-test-utils/src/binding/: incrediblesquaringtaskmanager.rs  ipauserregistry.rs  mod.rs  registrycoordinator.rs
blueprint-test-utils/src/sync/: tracked_callback_channel.rs
blueprint-test-utils/src/tangle/: mod.rs  node.rs  transactions.rs
blueprint-test-utils/stub-blueprint/: Cargo.toml  blueprint.json  cargo-generate.toml  flake.nix
blueprint-test-utils/tnt-core/: MasterBlueprintServiceManager.hex
cli/: CHANGELOG.md  Cargo.toml  README.md
cli/src/: commands.rs  create.rs  deploy.rs  generate.rs  keys.rs  lib.rs  main.rs  signer.rs  tests.rs  utils.rs
cli/src/anvil/: mod.rs  state.rs
cli/src/command/: keys.rs  mod.rs  register.rs
cli/src/create/: error.rs  mod.rs  source.rs  types.rs
cli/src/deploy/: eigenlayer.rs  mod.rs  tangle.rs
cli/src/foundry/: forge.rs  mod.rs
cli/src/run/: eigenlayer.rs  mod.rs  tangle.rs
cli/src/tests/: deployment.rs  keys.rs  mod.rs  run.rs  signers.rs  tangle.rs
common/: Cargo.toml
common/src/: channels.rs  client.rs  config.rs  debug_logger.rs  environments.rs  full_protocol.rs  helpers.rs  keystore.rs  lib.rs  locks.rs  prometheus.rs  protocol.rs  utils.rs
common/src/environments/: mod.rs
common/src/gadget/: message.rs  metrics.rs  mod.rs  work_manager.rs
common/src/module/: mod.rs
common/src/prometheus/: mod.rs  shared.rs  standard.rs  wasm.rs
common/src/transaction_manager/: mod.rs  tangle.rs
common/tests/: web.rs
core/: Cargo.toml
core/src/: job.rs  job_manager.rs  lib.rs
core/src/gadget/: error.rs  manager.rs  mod.rs
core/src/job/: builder.rs  error.rs  (+3 more)
eigen-contracts/: Cargo.toml  IncredibleSquaringDeployer.s.sol  README.md  remappings.txt
eigen-contracts/src/: Counter.sol  lib.rs
eigen-contracts/utils/: Utils.sol  generate_abi_json.sh
eigen-gadget/: Cargo.toml  LICENSE
eigen-gadget/contracts/: foundry.toml
eigen-gadget/keystore/: bls  ecdsa
eigen-gadget/src/: lib.rs  operator.rs  rpc_client.rs
eigen-gadget/test/: CredibleSquaringTaskManager.t.sol
eigen-tangle-avs/: Cargo.toml
eigen-tangle-avs/contracts/: remappings.txt
eigen-tangle-avs/src/: lib.rs  operator.rs
eigen-utils/: Cargo.toml  LICENSE
eigen-utils/src/: curve_utils.rs  lib.rs  types.rs  utils.rs
executor/: Cargo.toml
executor/src/: lib.rs
fireblocks-client/: Cargo.toml
fireblocks-client/src/: client.rs  fireblocks_wallet.rs  lib.rs  tests.rs  types.rs
gadget-common/: Cargo.toml
gadget-common/src/: channels.rs  client.rs  config.rs  full_protocol.rs  helpers.rs  keystore.rs  lib.rs  prometheus.rs  protocol.rs  utils.rs
gadget-core/: Cargo.toml
gadget-core/src/: job.rs  job_manager.rs  lib.rs
gadget-io/: CHANGELOG.md  Cargo.toml
gadget-io/src/: error.rs  lib.rs
libp2p/: Cargo.toml
libp2p/bitswap/: Cargo.toml
libp2p/common/: Cargo.toml
libp2p/light/: Cargo.toml  build.rs
libp2p/src/: behaviour.rs  config.rs  event.rs  lib.rs  mock.rs  peer_info.rs  peer_store.rs  protocol.rs  protocol_controller.rs  service.rs
libp2p/statement/: Cargo.toml
libp2p/sync/: Cargo.toml
libp2p/test/: Cargo.toml
libp2p/transactions/: Cargo.toml
playground/: Cargo.toml  README.md  certgen.rs  generate_certs.sh  node.rs  run.sh
playground/examples/: certgen.rs  client.rs  node.rs
sdk/: CHANGELOG.md  Cargo.toml  README.md  README_KEYS.md
sdk/src/: config.rs  context.rs  ctx.rs  docker.rs  env.rs  error.rs  job_runner.rs  lib.rs  logger.rs  logging.rs  mutex_ext.rs  random.rs  run.rs  tracer.rs  utils.rs
shell/: Cargo.toml  DEMO.md
shell-manager/: Cargo.toml
shell-manager/src/: config.rs  error.rs  main.rs  utils.rs
shell-manager/tests/: stub.rs
shell-sdk/: Cargo.toml  DEMO.md
shell-sdk/src/: config.rs  entry.rs  keystore.rs  lib.rs  misc.rs  setup.rs  shell.rs  tangle.rs
shell/src/: config.rs  keystore.rs  lib.rs  main.rs  network.rs  shell.rs  tangle.rs  web.rs
test-gadget/: Cargo.toml
test-gadget/src/: blockchain.rs  error.rs  gadget.rs  lib.rs  message.rs  test_network.rs  work_manager.rs
test-gadget/tests/: basic.rs  dfft.rs  dmsm.rs  web.rs  zk_network.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs  mock.rs
test-web/: Cargo.toml  package-lock.json  webdriver.json
test-web/src/: lib.rs
test-web/www/: bootstrap.js  index.html  index.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
web-shell/: Cargo.toml  js-utils.js
web-shell/src/: config.rs  keystore.rs  lib.rs  main.rs  shell.rs
webb-gadget/: Cargo.toml
webb-gadget/src/: helpers.rs  lib.rs  protocol.rs
(+1631 files in other folders)
