[package]
name = "anvil-testing-utils"
version = "0.1.0"
description = "Anvil testing utilities for Tangle Blueprints"
authors = ["Tangle Network <drew@tangle.tools>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://tangle.tools"
repository = "https://github.com/tangle-network/tangle"

[dependencies]
alloy-contract.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-transport.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
testcontainers.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
