[package]
name = "gadget-aws-kms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config.workspace = true
aws-types.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-secretsmanager.workspace = true
aws-sdk-kms.workspace = true
tokio.workspace = true
k256.workspace = true
picky-asn1-der.workspace = true
serde.workspace = true
alloy-primitives.workspace = true
thiserror.workspace = true
alloy-consensus.workspace = true
ark-secp256k1.workspace = true
ark-ff.workspace = true