[package]
name = "blueprint-manager"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "blueprint-manager"
path = "src/cli.rs"

[dependencies]
sp-core = { workspace = true }
gadget-core = { workspace = true }
gadget-common = { workspace = true }
gadget-io = { workspace = true }
gadget-sdk = { workspace = true, default-features = true }
color-eyre = { workspace = true, features = ["tracing-error", "color-spantrace", "issue-url"] }
serde = { workspace = true }
structopt = { workspace = true }
tangle-subxt = { workspace = true }
toml = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util", "signal"] }
reqwest = { workspace = true }
sha2 = { workspace = true }
tangle-environment = { workspace = true }
futures = { workspace = true }
sp-keystore = { workspace = true }
log = { workspace = true }
itertools = { workspace = true }
tangle-primitives = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "ansi", "tracing-log"] }
libp2p = { workspace = true }
auto_impl = { workspace = true }
[features]
default = ["std"]
std = [
    "gadget-common/std",
    "gadget-io/std",
    "gadget-sdk/std",
]
