[package]
name = "blueprint-manager"
version = "0.2.2"
description = "Tangle Blueprint manager and Runner"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "blueprint-manager"
path = "src/main.rs"

[dependencies]
sp-core = { workspace = true }
gadget-io = { workspace = true }
gadget-sdk = { workspace = true, default-features = true }
clap = { workspace = true, features = ["derive", "wrap_help"] }
color-eyre = { workspace = true, features = ["tracing-error", "color-spantrace", "issue-url"] }
serde = { workspace = true }
tangle-subxt = { workspace = true }
toml = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util", "signal", "macros"] }
reqwest = { workspace = true }
sha2 = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "ansi", "tracing-log"] }
libp2p = { workspace = true }
auto_impl = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
failure = { workspace = true }

[features]
default = ["std"]
std = ["gadget-io/std", "gadget-sdk/std", "tangle-subxt/std"]

[package.metadata.dist]
dist = false
