[package]
name = "blueprint-metadata"
version = "0.1.0"
description = "A build dependency for generating metadata for Blueprint at compile time."
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
typed-builder = { version = "0.19" }
gadget-blueprint-proc-macro-core = { workspace = true }
serde_json = { workspace = true }
rustdoc-types = "0.29.1"
fs2 = "0.4"
